使用generator创建dao、model和mapper； 创建service层account、requirement、project包

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.devtools.remote.restart.enabled=true
 spring.thymeleaf.cache=false
 
 # DB Config ##
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/rm?characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/request?characterEncoding=utf8&useSSL=true
 spring.datasource.username=root
 spring.datasource.password=19961112
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -22,4 +22,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## mybatis ##
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
+## session ##
+#待修改为redis
 spring.session.store-type=none
