--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ spring.devtools.remote.restart.enabled=true
 spring.thymeleaf.cache=false
 
 # DB Config ##
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/request?characterEncoding=utf8&useSSL=true
+spring.datasource.url=jdbc:mysql://localhost:3306/request?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=19961112
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## mybatis ##
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
