--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.thymeleaf.cache=false
 # DB Config ##
 spring.datasource.url=jdbc:mysql://localhost:3306/request?serverTimezone=GMT%2B8&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=nju151250115
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ## mybatis ##
