完成like&comment功能（要死了）；添加图标集font-awesome；修改过滤器，终于能显示图标了；todo：列表排序和搜索

--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,16 @@
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
 				<excludes>
-					<exclude>static/fonts/**</exclude>
+					<exclude>**/*.ttf</exclude>
+					<exclude>**/*.woff</exclude>
 				</excludes>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>false</filtering>
 				<includes>
-					<include>static/fonts/**</include>
+					<include>**/*.ttf</include>
+					<include>**/*.woff</include>
 				</includes>
 			</resource>
 		</resources>
